# DCPCommunication

./: .gitignore  CMakeLists.txt  Dockerfile.dcp_master  Dockerfile.slave_one  Dockerfile.slave_two  README.md  build.sh  build_dockers.sh
docker_results/: result_slave_one.csv  result_slave_two.csv
lib/dcp/core/dcp/logic/: AbstractDcpManagerSlave.hpp
lib/dcp/core/dcp/model/constant/: DcpPduType.hpp
lib/fmilib/shared/: fmi2.h  sim_support.c  sim_support.h  xmlVersionParser.c
lib/fmilib/shared/parser/: XmlElement.cpp  XmlParser.cpp  XmlParserCApi.cpp
lib/fmilib/shared/parser/libxml/: xmlreader.h
models/: MSD1-Slave-Description.xml  MSD2-Slave-Description.xml  Model1.fmu  Model2.fmu  Proxy.fmu  data.csv
src/: FMURunner.cpp  FMURunner.h  main.cpp
src/Master/: MasterModel.h  MasterModel.hpp
src/Slave/: SlaveBase.hpp  SlaveOne.hpp  SlaveTwo.hpp
src/SlaveOne/: SlaveOne.h  SlaveOne.hpp
src/SlaveTwo/: SlaveTwo.h  SlaveTwo.hpp
